# CS284-Simultaneous-Localization-and-Mapping

./: README.md  main.py
HW1/: getMatrix.py  main.py
HW1/TransformMatrix/: 10&9  105&104  11&10  110&109  117&116  118&117  127&126  131&130  140&139  144&143  154&153  161&160  163&162  165&164  17&16  185&184  186&185  192&191  193&192  194&193  196&195  199&198  2&1  204&203  205&204  211&210  212&211  216&215  219&218  222&221  229&228  232&231  236&235  237&236  240&239  242&241  252&251  257&256  260&259  273&272  (+50 more)
HW1/TransformMatrix_noisy/: 1&0  10&9  100&99  101&100  102&101  103&102  104&103  105&104  106&105  107&106  108&107  109&108  11&10  110&109  111&110  112&111  113&112  114&113  115&114  116&115  117&116  118&117  119&118  12&11  120&119  121&120  122&121  123&122  124&123  125&124  126&125  127&126  128&127  129&128  13&12  130&129  131&130  132&131  133&132  134&133  (+319 more)
HW1/hw1_data/: data.txt  data_noisy.txt
HW2/: CMakeLists.txt  main.cpp  main.py  res_task2.g2o  res_task3.g2o  task2_g2o.g2o  task3_g2o.g2o
HW2/CS284_hw2_data/: T_adjacent.txt  T_everytwo.txt
HW2/g2o_data/: output_MITb_g2o.g2o  res_task3.g2o  task1_g2o.g2o  task2_g2o.g2o  task3_g2o.g2o
HW3/: main.py
HW4/: main.py  utils.py
HW5/: main.py  result.ply
HW5/CS284_hw5_data/pose/: bottom.txt  surround1.txt  surround10.txt  surround11.txt  surround12.txt  surround2.txt  surround3.txt  surround4.txt  surround5.txt  surround6.txt  surround7.txt  surround8.txt  surround9.txt  top.txt
HW5/KinectFusion/: main.py
HW5/KinectFusion/data_loader/: __init__.py  dataloader.py
(+11 files in other folders)
